--- a/creative/login.html
+++ b/creative/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta name="viewport" content="width=device-width,user-scalable=0" />
 	<meta charset="UTF-8">
 	<title>小区管理系统登录页面</title>
 	<style>
