--- a/npusec/index.html
+++ b/npusec/index.html
@@ -3,9 +3,26 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />   
 	<meta charset="UTF-8">
-	<title>andriod 测试</title>
-</head>
+	<title>[NWPUSEC]西北工业大学信息安全协会</title>
+	<script src="http://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
+	
+     <style>
+		 /*重置css样式*/
+		 *{padding:0;margin:0;font-size: 14px; font-family: "Microsoft yahei";font-weight: normal}
+		 ul {list-style: none;}
+		 a{text-decoration:none;background-color:rgba(0,0,0,0);display:block;}
+		 /**/
+	  .outer{width:100%;background:url(./image/field1.jpg);height:200px;background-position: center; }
+	  	 
+	 </style>
+</head> 
 <body>
-	 
+	  <div class="outer">
+		  <div class="inner">
+		    <div class="header"> 
+			      
+		     </div>
+		  </div>
+	  </div>
 </body>
 </html>
