--- a/webrefer/index.html
+++ b/webrefer/index.html
@@ -6,7 +6,79 @@
 <meta name="description" content="乐意贷 成都乐意 成都乐意贷 成都贷款 成都信用贷款 成都无抵押贷款 成都过桥 成都短拆 成都车贷 成都房贷">
 <meta name="keywords" content="乐意贷 成都乐意 成都乐意贷 成都贷款 成都信用贷款 成都无抵押贷款 成都过桥 成都短拆 成都车贷 成都房贷">
 <meta charset="utf-8">
+<style >
+  /*--css重置--*/
+*{font-size:12px;font-family:"Microsoft Yahei","黑体";margin:0;padding:0;}
+html{background-color:#ddd;}
+li{list-style:none;}
+h1,h2,h3{font-weight:normal;}
+img{display:block;background-color:rgba(0,0,0,0);border:none 0;}
+a{text-decoration:none;background-color:rgba(0,0,0,0);display:block;}
+h1,h2,p{background-color:#fff;background-color:rgba(0,0,0,0);}
 
+/*--头部开始--*/
+header{border-top:2px solid #2faae3;box-shadow:0px -3px 10px 1px #666;background-color:#e8e8e8;margin-bottom:3px;overflow:hidden;}
+/*logo栏*/
+.logoBox{width:960px;height:96px;margin:0 auto;background:url(images/headerBG.png) no-repeat bottom center;overflow:hidden;}
+.logo{margin:10px 0;float:left;}
+.logo img{background:url(images/headerBG.png) no-repeat 0 -10px;}
+.phoneNoBox{margin-top:22px;background-color:rgba(0,0,0,0);float:right;}
+.phoneNo{padding-left:26px;font-size:22px;line-height:20px;font-family:"Arial","Helvetica";font-weight:bold;color:#2faae3;text-shadow:1px 1px white,2px 2px 4px rgba(0, 0, 0,0.2);background:url(images/tel.png) no-repeat center left;}
+.searchBox{margin-top:10px;}
+.searchBox .input{outline:none;border:1px solid #2faae3;padding:0 6px;width:106px;height:23px;font-size:12px;line-height:14px;color:#9c9c9c;background-color:#fff;float:left;}
+.searchBox .submit{margin-left:3px;cursor:pointer;outline:none;border:0;width:48px;height:25px;font-size:12px;line-height:12px;color:#fff;background-color:#2faae3;float:left;}
+/*导航栏*/
+.nav{background:url(images/navBG.png) repeat-x center center;box-shadow:0px 1px 1px 1px #ddd;overflow:hidden;}
+.nav ul{width:960px;margin:0 auto;background:url(images/navBG.png) repeat-x center center;overflow:hidden;}
+.nav li{float:left;}
+.nav a{width:117px;height:45px;margin-left:-1px;text-align:center;font-size:14px;line-height:45px;color:#666;background:url(images/navBG_A.png) no-repeat center center;}
+.nav a.left{margin-left:0;}
+.nav a:hover{color:#2faae3;border-top:1px solid #2faae3;height:44px;}
+.nav a.active{background:url(images/navBG_B.png) repeat-x center center;color:#fff;font-weight:bold;}
+/*--头部结束--*/
+
+/*--内容开始--*/
+.container{width:960px;margin:0 auto;overflow:hidden;}
+.banner{width:960px;height:400px;margin-top:12px;background:url(images/s1.jpg);overflow:hidden;}
+.bannerText{width:60%;margin-top:240px;margin-right:14px;float:right;}
+.bannerText h1{font-size:18px;line-height:32px;padding-left:18px;color:#fff;background-color:rgba(34,34,34,0.8);}
+.bannerText p{text-align:center;font-size:15px;line-height:20px;padding:12px 20px;background-color:rgba(255,255,255,0.85);}
+/*--业务范围--*/
+.servBox{margin-top:16px;border-radius:26px 0 26px 0;}
+.servBox h1{font-size:16px;line-height:26px;padding:0 20px;text-align:center;color:#FFF;background-color:#676767;}
+.column{background-color:#fff;overflow:hidden;}
+.service{width:167.2px;margin:20px 0;margin-left:18.6px;border:1px solid #ccc;background-color:#efefef;float:left;}
+.service:hover{cursor:pointer;-webkit-filter:grayscale(100%);-moz-filter:grayscale(100%);-ms-filter:grayscale(100%);-o-filter:grayscale(100%);filter:grayscale(100%);filter:gray;}
+.service .imgBox{width:70%;background-color:rgba(0,0,0,0);margin:0 auto;margin-top:20px;}
+.service img{height:80px;margin:0 auto;}
+.service h2{font-size:24px;text-align:center;color:#2faae3;margin:20px 0;}
+.service .text{height:110px;background-color:#222;border-top:6px solid #222;border-bottom:6px solid #222;}
+.service p{font-size:16px;line-height:22px;text-align:center;color:#fff;}
+/*--成功案例--*/
+.issue{width:630px;float:left;}
+.success{padding-left:24px;width:100%;background-color:#fff;}
+.successLeft{width:210px;padding:12px 0;padding-top:10px;float:left;}
+.successLeft img{width:190px;height:65px;padding:1px;border:1px solid #bbb;margin:0 auto;margin-top:9px;}
+.successRight{width:364px;padding:10px 0;float:right;}
+.successRight dl{background-color:rgba(0,0,0,0);}
+.successRight dt{font-size:18px;line-height:18px;color:#666;padding:2px 0;padding-left:16px;border-left:4px solid #2faae3;margin-top:8px;}
+.successRight dd{font-size:14px;width:180px;color:#888;padding:2px 0;float:left;}
+/*--公司介绍--*/
+.about{width:310px;float:right;}
+.about img{width:100%;height:199px;}
+.about p{margin:12px 26px;font-size:14px;color:#666;text-indent:2em;}
+/*--内容结束--*/
+
+/*--底部开始--*/
+footer{margin-top:30px;padding:30px 0;background-color:#676767;overflow:hidden;}
+footer ul{width:413px;margin:0 auto;overflow:hidden;}
+footer li{float:left;}
+footer a{font-size:12px;line-height:12px;padding:0 10px;color:#ddd;border-right:1px solid #b2b2b2;}
+footer a:hover{color:#fff;}
+.last{border:0;}
+footer p{color:#ddd;text-align:center;margin-top:6px;}
+/*--底部结束--*/
+</style>
 
 
 </head>
